--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.css
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.css
@@ -1,3 +1,21 @@
 .mat-radio-button ~ .mat-radio-button {
     margin-left: 60px;
   }
+  .loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid  #c48f45; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 1s linear infinite;
+    position: fixed;
+    left: 50%;
+    margin-left: -4em;
+    top: 50%;
+    z-index: 1;
+    margin: -75px 0 0 -75px;
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
