small update on spinner and datepicker

--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -133,7 +133,7 @@
 							(bsValueChange)="onReturnChange($event)">
 					</div>
 				</div>
-				<div class="row" *ngIf="!this.productDetail['productDetail'] || this.productDetail['productDetail'].length==0">
+				<div class="row mt-3" *ngIf="!this.productDetail['productDetail'] || this.productDetail['productDetail'].length==0">
 					<div class="ml-4 mt-1">
 						<span>From </span>
 						<input bsDatepicker type="text" class="input_line" placeholder="Start Date"
