--- a/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,8 @@
 <div style="text-align:center;padding-top:4%;">
 	<h2>Admin Dashboard</h2><br>
 	<hr><br>
-
+	<h4>Admin User will auto logout if no activity for 120 mins</h4>
+	<br><br>
 	<div class="row justify-content-center">
 		<h3 class="col-4">Edit Navbar Categories</h3>
 		<div class="dropdown col-3">
