--- a/src/app/fcomponents/admin/admin-cart/admin-cart.component.html
+++ b/src/app/fcomponents/admin/admin-cart/admin-cart.component.html
@@ -5,6 +5,14 @@
 <div>
   <div class="mt-3">
     <h2>Orders</h2>
+    <!-- Admin Search area -->
+    <div class="row">
+      
+    <!-- Search by phone num -->
+
+    <!-- Search by event time -->
+    </div>
+
   </div>
   <table class="table">
     <thead>
@@ -63,7 +71,7 @@
         <td>${{data.price}}</td>
         <td>{{data.location}}</td>
         <td style="font-size:10px;">{{data.createOn | date:'mediumDate'}}</td>
-        <td style="font-size:10px;">{{data.plannedTime | date:'short'}}</td>
+        <td style="font-size:10px;">{{data.eventStartDate | date:'mediumDate'}} - {{data.eventEndDate | date:'mediumDate'}}</td>
         <td style="font-size:10px;">{{data.updateOn | date:'mediumDate'}}</td>
         <!-- <td><i class="far fa-edit" (click)="openCart(data)" title="Edit"></i></td> -->
         <td ><i class="far fa-trash-alt" title="Delete" (click)="deleteCart(data)"></i></td>
