--- a/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,7 +1,7 @@
 <div style="text-align:center;padding-top:4%;">
 	<h2>Admin Dashboard</h2><br>
 	<hr><br>
-	<h4>Admin User will auto logout if no activity for 120 mins</h4>
+	<h6><i>Note: System will logout Automatically if not active for 120 minutes</i></h6>
 	<br><br>
 	<div class="row justify-content-center">
 		<h3 class="col-4">Edit Navbar Categories</h3>
@@ -51,10 +51,5 @@
 			</div>
 			<div>{{feedbackMessage}}</div>
 		</div>
-
-		<!-- <div *ngIf="selectedType">
-        <div *ngFor="let cate of selectedType['0'].productCategory">{{cate.categoryName}}</div>
-      </div> -->
-
-	</div><br><br>
+	</div>
 </div>
