--- a/src/app/fcomponents/user-dashboard/manage-password/manage-password.component.html
+++ b/src/app/fcomponents/user-dashboard/manage-password/manage-password.component.html
@@ -1,6 +1,6 @@
 <div class="card">
 	<div class="card-header">
-		<h4>Manage Your Password</h4>
+		<h4>Reset Your Password</h4>
 	</div>
 	<div class="card-body bg-light text-center py-3">
 		<form [formGroup]="changePasswdForm" (ngSubmit)="onSubmit()">
@@ -37,7 +37,7 @@
 			<div *ngIf="this.changePasswdForm.valid && signupFailed" class="alert alert-danger text-center">
 				{{ errorMessage }}
 			</div>
-			<button type="submit" mat-raised-button class="primaryButton">Update</button>
+			<button type="submit" mat-raised-button class="primaryButton mt-3">Submit</button>
 		</form>
 	</div>
 </div>
