--- a/src/app/fcomponents/user-dashboard/order-history/order-history.component.css
+++ b/src/app/fcomponents/user-dashboard/order-history/order-history.component.css
@@ -5,10 +5,11 @@ span {
     color: #c48f45;
 }
 .card {
-	min-height: 350px;
-	max-height: 500px;
-	overflow: scroll;
-    width: 1000px;
+	min-height: 500px;
+	max-height: 600px;
+    overflow: scroll;
+    overflow-x: hidden;
+    max-width: 80%;
     margin: 0 auto;
     margin-top: 3%;
 }
@@ -21,9 +22,6 @@ span {
     color: white;
 	text-align: center;
 	margin-top: -10px;
-}
-.order-list {
-    color: #535353;
 }
 .order-list:hover {
     color: #caa26b;
