--- a/src/app/fcomponents/user-dashboard/order-history/order-history.component.html
+++ b/src/app/fcomponents/user-dashboard/order-history/order-history.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-	<div class="card-body bg-light text-center">
+	<div class="card-body text-center">
 		<table class="table">
 			<tr class="card-header">
 				<th>Order ID</th>
