--- a/src/app/fcomponents/admin/admin-dialogs/product-dialog/product-dialog.component.html
+++ b/src/app/fcomponents/admin/admin-dialogs/product-dialog/product-dialog.component.html
@@ -1,115 +1,155 @@
 <h2 mat-dialog-title>{{dialogTitle}}</h2>
 
 <mat-dialog-content *ngIf="!editImage">
-    <!-- title && subtitle-->
-    <div class="row">
-        <div class="col-6">Product Title:</div><div class="col-6"> Product Subtitle:</div>
-        <div class="form-group col-6">
-            <input class="form-control" name="title" placeholder="Title *" [(ngModel)]="productForm.title" #title="ngModel">
-         </div>
-         <div class="form-group col-6">
-            <input class="form-control" name="subTitle" placeholder="Subtitle *" [(ngModel)]="productForm.subTitle" #subTitle="ngModel">
-         </div>
-     <!-- total stock %% available stock-->
-     <div class="col-6">Total stock:</div>  <div class="col-6">Available Stock:</div>
-     <div class="form-group col-6">
-        <input class="form-control" min="0" type="number" name="totalStock" placeholder="Total stock *" [(ngModel)]="productForm.totalStock" #totalStock="ngModel">
-     </div>
-     <div class="form-group col-6">
-        <input class="form-control" min="0" type="number" name="availableStock" placeholder="Available stock *" [(ngModel)]="productForm.availableStock" #availableStock="ngModel">
-    </div>
-     <!-- Price && Discount -->
-     <div class="col-6">General Price:</div> <div class="col-6">Discount:</div>
-        <div class="form-group col-6">
-            <input class="form-control"  min="0" type="number" name="price" placeholder="Price" [(ngModel)]="productForm.price" #price="ngModel">
-        </div>            
-    <div class="form-group col-6">
-        <input class="form-control"  min="0" type="number" name="discount" placeholder="Discount" [(ngModel)]="productForm.discount" #discount="ngModel">
-    </div>            
-     <!-- choose category -->
-    <div class="col-12" *ngIf="isCategoryDropdownShown('update') ">
-        Choose category of product:
-    </div>
-    <div class="form-group col-12">
-        <!-- !when update hire product -->
-        <select *ngIf="isCategoryDropdownShown('update')" class="custom-select form-control" name="categoryId"
-        [(ngModel)]="productForm.categoryId" #categoryId="ngModel">
-            <option *ngFor="let cate of allCategories, index as i" value= {{cate.categoryId}} [selected]="displayData.categoryId == cate.categoryId">{{cate.categoryName}}</option>
-        </select>
-        <!-- !when create hire product -->
-        <select *ngIf="isCategoryDropdownShown('create')" class="custom-select form-control" name="categoryId"
-        [(ngModel)]="productForm.categoryId" #categoryId="ngModel">
-            <option value="null" disabled selected>Choose a product type</option>
-            <option *ngFor="let cate of allCategories, index as i" value= {{cate.categoryId}}>{{cate.categoryName}}</option>
-        </select>
-    </div>
-    <!-- choose special order displayed on homepage-->
-    <div class="col-12">Display order (display from num 1 to 100):</div>
-    <div class="form-group col-12">
-        <input class="form-control" type="number" name="specialOrder" placeholder="special order" min="0"
-        [(ngModel)]="productForm.specialOrder" #specialOrder="ngModel">
-    </div>            
-    <!-- Details of Product -->
-    <div style="margin-top:14px;" class="col-12" *ngIf="status=='update'">
-    <div class="row text-center">
-        <div class="col-9 text-left">Products specification:</div> <div class="col-3 text-right"><button type="button" class="btn btn-outline-secondary btn-sm" (click)="addDetails()">Add new detail</button></div>
-        <div class="col-2">Title:</div><div class="col-2">Price:</div><div class="col-2">Discount:</div>
-        <div class="col-2">Total stock:</div><div class="col-3">Available stock:</div><div class="col-1 p-0">Delete</div>
-    </div>
+	<!-- title && subtitle-->
+	<div class="row">
+		<div class="col-6">Product Title</div>
+		<div class="col-6"> Product Subtitle</div>
+		<div class="form-group col-6">
+			<input class="form-control" name="title" placeholder="Title *" [(ngModel)]="productForm.title"
+				#title="ngModel">
+		</div>
+		<div class="form-group col-6">
+			<input class="form-control" name="subTitle" placeholder="Subtitle *" [(ngModel)]="productForm.subTitle"
+				#subTitle="ngModel">
+		</div>
+		<!-- total stock %% available stock-->
+		<div class="col-6">Total stock</div>
+		<div class="col-6">Available Stock</div>
+		<div class="form-group col-6">
+			<input class="form-control" min="0" type="number" name="totalStock" placeholder="Total stock *"
+				[(ngModel)]="productForm.totalStock" #totalStock="ngModel">
+		</div>
+		<div class="form-group col-6">
+			<input class="form-control" min="0" type="number" name="availableStock" placeholder="Available stock *"
+				[(ngModel)]="productForm.availableStock" #availableStock="ngModel">
+		</div>
+		<!-- Price && Discount -->
+		<div class="col-6">General Price</div>
+		<div class="col-6">Discount</div>
+		<div class="form-group col-6">
+			<input class="form-control" min="0" type="number" name="price" placeholder="Price"
+				[(ngModel)]="productForm.price" #price="ngModel">
+		</div>
+		<div class="form-group col-6">
+			<input class="form-control" min="0" type="number" name="discount" placeholder="Discount"
+				[(ngModel)]="productForm.discount" #discount="ngModel">
+		</div>
+		<!-- choose category -->
+		<div class="col-12" *ngIf="isCategoryDropdownShown('update') ">
+			Product Category
+		</div>
+		<div class="form-group col-12">
+			<!-- !when update hire product -->
+			<select *ngIf="isCategoryDropdownShown('update')" class="custom-select form-control" name="categoryId"
+				[(ngModel)]="productForm.categoryId" #categoryId="ngModel">
+				<option *ngFor="let cate of allCategories, index as i" value={{cate.categoryId}}
+					[selected]="displayData.categoryId == cate.categoryId">{{cate.categoryName}}</option>
+			</select>
+			<!-- !when create hire product -->
+			<select *ngIf="isCategoryDropdownShown('create')" class="custom-select form-control" name="categoryId"
+				[(ngModel)]="productForm.categoryId" #categoryId="ngModel">
+				<option value="null" disabled selected>Choose a product type</option>
+				<option *ngFor="let cate of allCategories, index as i" value={{cate.categoryId}}>{{cate.categoryName}}
+				</option>
+			</select>
+		</div>
+		<!-- choose special order displayed on homepage-->
+		<div class="col-12">Display order (display from num 1 to 100)</div>
+		<div class="form-group col-12 mt-2">
+			<input class="form-control" type="number" name="specialOrder" placeholder="special order" min="0"
+				[(ngModel)]="productForm.specialOrder" #specialOrder="ngModel">
+		</div>
 
-        <form [formGroup]="detailForm">
-            <div formArrayName="detailItems">
-                <div *ngFor="let detail of detailForm.controls.detailItems.controls, index as i">
-                    <div [formGroupName]="i">
-                    <input class="col-2" type="text" formControlName="ProductDetail1" placeholder="Title">
-                    <input class="col-2" type="number" min="0" formControlName="Price" placeholder="Price">
-                    <input class="col-2" type="number" min="0" formControlName="Discount" placeholder="Discount">
-                    <input class="col-2" type="number" min="0" formControlName="TotalStock" placeholder="Total stock">
-                    <input class="col-3" type="number" min="0" formControlName="AvailableStock" placeholder="Available stock">
-                    <i class="fas fa-trash-alt col-1 text-center" (click)="deleteDetail(detail,i)"></i>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
+		<div class="ml-3 mt-3">
+			<button type="button" class="btn btn-outline-info" (click)="goEditImage()" *ngIf="status == 'update'">Edit product image</button>
+			<button type="button" class="btn btn-outline-secondary ml-2" (click)="addDetails()">+ Add new child product</button>
+		</div>
 
-    <!-- description -->
-    <div style="margin-top:14px;" class="col-12">Description:</div>
-    <div class="form-group col-12">
-        <textarea rows="4" cols="50" class="form-control" name="description" placeholder="Description *" [(ngModel)]="productForm.description" #description="ngModel"></textarea>
-    </div>
-    <div><button type="button" class="btn btn-outline-info" (click)="goEditImage()" *ngIf="status == 'update'">Edit product image</button></div>
-</div>
+		<!-- Details of Product -->
+		<div style="margin-top:25px;" class="col-12" *ngIf="status=='update'">
+			<div class="row text-center">
+				<div class="col-9 text-left">
+					<h6>Child Products List:</h6>
+				</div>
+			</div>
+			<div class="row ml-3">
+				<div class="col-2">Title</div>
+				<div class="col-2">Price</div>
+				<div class="col-2">Discount</div>
+				<div class="col-2">Total stock</div>
+				<div class="col-3">Available stock</div>
+				<div class="col-1 p-0">Delete</div>
+			</div>
+
+			<form [formGroup]="detailForm">
+				<div formArrayName="detailItems">
+					<div *ngFor="let detail of detailForm.controls.detailItems.controls, index as i">
+						<div [formGroupName]="i">
+							<input class="col-2" type="text" formControlName="ProductDetail1" placeholder="Title">
+							<input class="col-2" type="number" min="0" formControlName="Price" placeholder="Price">
+							<input class="col-2" type="number" min="0" formControlName="Discount"
+								placeholder="Discount">
+							<input class="col-2" type="number" min="0" formControlName="TotalStock"
+								placeholder="Total stock">
+							<input class="col-3" type="number" min="0" formControlName="AvailableStock"
+								placeholder="Available stock">
+							<i class="fas fa-trash-alt col-1 text-center" (click)="deleteDetail(detail,i)"></i>
+						</div>
+					</div>
+				</div>
+			</form>
+
+			<div *ngIf="!detailList[0]" 
+				style="color: #c48f45; text-align: center; height: 30px;">
+				<p class="mt-2">Currently No Child Products for This Item!</p>
+			</div>
+		</div>
+
+		<!-- description -->
+		<div style="margin-top:14px;" class="col-12">
+			<h6>Product Description:</h6>
+		</div>
+		<div class="form-group col-12">
+			<textarea rows="4" cols="50" class="form-control" name="description" placeholder="Description *"
+				[(ngModel)]="productForm.description" #description="ngModel"></textarea>
+		</div>
+	</div>
 </mat-dialog-content>
 
 <mat-dialog-content *ngIf="editImage">
-    Edit Product Images
-    <!-- !show images -->
-    <div *ngIf="imageList" class="row mb-5" >
-        <div *ngFor="let img of imageList" class="ml-3">
-            <img src="{{baseImageUrl}}{{img.url}}"><br>
-            <!-- !delete image -->
-            <button type="button" class="btn btn-outline-danger btn-sm mt-2" id="{{img.id}}" (click)="deleteImage(img.id)" *ngIf="!isLoading" [disabled] = "isLoading">Delete</button>
-        </div>
-    </div>
-    <div class="spinner-border text-info" role="status" *ngIf="isLoading">
-            <span class="sr-only">Loading...</span>
-    </div>
-    <!-- !upload img -->
-    <div class="mt-3">
-        <input #imageInput type="file" (change)="onFileSelected($event)">
-        <button type="button" class="btn btn-outline-info btn-sm" (click)="onUpload()" [disabled] = "isLoading">upload</button>    
-    </div> 
-    <div *ngIf="isImageEmpty" style="color:red"> Please add a image</div>
-    <div class="mt-3"><button type="button" class="btn btn-outline-info" (click)="goEditProduct()">Edit product detail</button></div>
-    <br>
-    <div *ngIf="feedbackMessage">
-        {{feedbackMessage}}
-    </div>
+	Edit Product Images
+	<!-- !show images -->
+	<div *ngIf="imageList" class="row mb-5">
+		<div *ngFor="let img of imageList" class="ml-3">
+			<img src="{{baseImageUrl}}{{img.url}}"><br>
+			<!-- !delete image -->
+			<button type="button" class="btn btn-outline-danger btn-sm mt-2" id="{{img.id}}"
+				(click)="deleteImage(img.id)" *ngIf="!isLoading" [disabled]="isLoading">Delete</button>
+		</div>
+	</div>
+	<div class="spinner-border text-info" role="status" *ngIf="isLoading">
+		<span class="sr-only">Loading...</span>
+	</div>
+	<!-- !upload img -->
+	<div class="mt-3">
+		<input #imageInput type="file" (change)="onFileSelected($event)">
+		<button type="button" class="btn btn-outline-info btn-sm" (click)="onUpload()"
+			[disabled]="isLoading">upload</button>
+	</div>
+	<div *ngIf="isImageEmpty" style="color:red"> Please add a image</div>
+	<div class="mt-3"><button type="button" class="btn btn-outline-info" (click)="goEditProduct()">Edit product
+			detail</button></div>
+	<br>
+	<div *ngIf="feedbackMessage">
+		{{feedbackMessage}}
+	</div>
 </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button type="button" class="btn btn-outline-secondary" (click)="close()">Close</button>
-    <button type="button" class="btn btn-outline-primary ml-80" (click)="save()" *ngIf="status == 'update'" [disabled] = "isLoading == true">Save</button>
-    <button type="button" class="btn btn-outline-primary ml-80" (click)="create()" *ngIf="status == 'create'" [disabled] = "isLoading == true">Create</button>
+	<button type="button" class="btn btn-outline-secondary" (click)="close()">Close</button>
+	<button type="button" class="btn btn-outline-primary ml-80" (click)="save()" *ngIf="status == 'update'"
+		[disabled]="isLoading == true">Save</button>
+	<button type="button" class="btn btn-outline-primary ml-80" (click)="create()" *ngIf="status == 'create'"
+		[disabled]="isLoading == true">Create</button>
 </mat-dialog-actions>
