--- a/src/app/fcomponents/admin/admin-cart/admin-cart.component.css
+++ b/src/app/fcomponents/admin/admin-cart/admin-cart.component.css
@@ -22,3 +22,25 @@ td{
 .table td{
     padding: 0.4rem;
 }
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+  .input_line {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: #c48f45 solid;
+	border-radius: 0;
+	padding: 3px 10px;
+	width: 150px;
+  }
+  .searchButton{
+      width: 100%;
+      margin-bottom:13px
+  }
