--- a/src/app/fcomponents/admin/admin-cart/admin-cart.component.html
+++ b/src/app/fcomponents/admin/admin-cart/admin-cart.component.html
@@ -6,12 +6,37 @@
   <div class="mt-3">
     <h2>Orders</h2>
     <!-- Admin Search area -->
-    <div class="row">
-      
+      <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="mt-2 ml-5 example-form ">
+        <table class="example-full-width" cellspacing="0"><tr >
+          <td class="pr-3"><mat-form-field class="example-full-width">
+            <mat-label>Phone Number</mat-label>
+            <input matInput formControlName="phone" placeholder="Ex. 02102873948">
+          </mat-form-field></td>
+          <td class="pr-3"><mat-form-field class="example-full-width">
+            <mat-label>Event Date</mat-label>
+            <input matInput bsDatepicker formControlName="eventdate" type="text" 
+							[bsConfig]="{dateInputFormat: 'MMMM Do YYYY',containerClass:'theme-orange',showWeekNumbers:false}"
+							>
+          </mat-form-field></td>
+          <td class="pr-3"><mat-form-field class="example-full-width">
+            <mat-label>First Name</mat-label>
+            <input matInput  formControlName="firstname" placeholder="Ex. Li">
+          </mat-form-field></td>
+           <td><button mat-raised-button type="submit" class="searchButton">Search</button></td>
+        </tr></table>
+       
+        </form>
+        <hr>
+        <div class="ml-5">
+          <td class="pr-3"><mat-form-field class="example-full-width">
+            <mat-label>Order Id</mat-label>
+            <input matInput #orderId placeholder="Ex. 220" (onchange)="update(orderId.value)">
+          </mat-form-field></td>
+          <td><button mat-raised-button type="button" (click)="searchOrderId(orderId.value)" class="searchButton">Search by Order Id</button></td>
+        </div>
     <!-- Search by phone num -->
 
     <!-- Search by event time -->
-    </div>
 
   </div>
   <table class="table">
@@ -28,7 +53,56 @@
         <th scope="col">Delete<br><span>删除</span></th>
       </tr>
     </thead>
-    <tbody *ngIf="displayedCartData">
+    <tbody *ngIf="showSingleCart">
+      <tr>
+        <td>{{singleCartData.cartId}}</td>
+        <!--CartProds-->
+        <td>
+          <div class="dropdown">
+            <button class="btn btn-secondary" type="button" (click)="openCart(data)">
+              View Detail
+            </button>
+            <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" *ngIf="data.cartProd">
+              <div *ngFor="let cart of data.cartProd">
+                <div class="dropdown-item">
+                  <b>{{cart.title}}</b> |
+                  <b>${{cart.price}}</b> |
+                  Qty:<b>{{cart.quantity}}</b>
+                </div>
+              </div>
+              <a class="dropdown-item" *ngIf="data.cartProd.length==0">Empty</a>
+            </div> -->
+          </div>
+        </td>
+        <!--End CartProds-->
+        <!--Contact-->
+        <td>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              View Contact
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-item" *ngIf="singleCartData.contact">
+                Firstname: <b>{{singleCartData.contact.firstName}}</b><br>
+                Lastname: <b>{{singleCartData.contact.lastName}}</b><br>
+                Mob: <b>{{singleCartData.contact.phoneNum}}</b><br>
+                Email: <b>{{singleCartData.contact.email}}</b>
+              </div>
+            </div>
+          </div>
+        </td>
+        <!--End Contact-->
+        <td>${{singleCartData.price}}</td>
+        <td>{{singleCartData.location}}</td>
+        <td style="font-size:10px;">{{singleCartData.createOn | date:'mediumDate'}}</td>
+        <td style="font-size:10px;">{{singleCartData.eventStartDate | date:'mediumDate'}} - {{singleCartData.eventEndDate | date:'mediumDate'}}</td>
+        <td style="font-size:10px;">{{singleCartData.updateOn | date:'mediumDate'}}</td>
+        <!-- <td><i class="far fa-edit" (click)="openCart(data)" title="Edit"></i></td> -->
+        <td ><i class="far fa-trash-alt" title="Delete" (click)="deleteCart(data)"></i></td>
+      </tr>
+    </tbody>
+    <tbody *ngIf="showData">
       <tr *ngFor="let data of displayedCartData">
         <td>{{data.cartId}}</td>
         <!--CartProds-->
