--- a/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
+++ b/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
@@ -28,7 +28,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" id="7" routerLink='/admin/adminCarts'>
+				<a class="nav-link" id="7" (click)="reload()" routerLink='/admin/adminCarts'>
 					<i class="fas fa-shipping-fast"></i>
 					Orders
 				</a>
